# work-evaluator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py  test_aliyun_git_server.py  test_git_server.py
config/: aliyun.yaml.example  config.yaml
config/templates/: member_report_template.md  team_report_template.md
core/: code_analyzer.py  config_manager.py  git_service.py  member_classifier.py  report_generator.py
docs/: api_reference.md  installation.md  mcp_protocol.md  project_architecture.md  usage.md
mcp_server/: __init__.py  aliyun_git_server.py
tests/: test_git_service.py  test_mcp_server.py
